# gpv23

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  benchmark.cpp
checks/: avx256.cpp  avx512dq.cpp  avx512ifma.cpp
include/: dcrtpoly.h  ntt.h  nttavx512dq.h  nttavx512ifma.h  nttscalar.h  poly.h  rlwe.h  zp.h
misc/: CMakeLists.txt  test.cpp
scripts/: gen.sage
src/: main.cpp
tests/: CMakeLists.txt  ntt_tests.cpp
